# Codaphela.Library

./: .gitignore  CMakeLists.txt  Doxyfile  do_build.bat  do_build.sh
BaseLib/: ASCIITree.cpp  ArrayBit.cpp  ArrayBit.h  ArrayPrimitiveTemplate.h  ArraySimple.h  ArrayTemplate.h  ArrayTemplateMinimal.h  ArrayTemplatePrimitive.h  CMakeLists.txt  Chars.cpp  Chars.h  ConstructorCall.h  Constructors.cpp  Constructors.h  DataMacro.h  DebugLog.cpp  DebugLog.h  Define.h  EnumeratorTemplate.h  FastMemcpy.cpp  FastMemset.h  FileNames.h  FileNode.h  FileUtil_Linux.cpp  FileUtil_Windows.cpp  LinkListTemplate.h  LinkListTemplateFreeList.h  LinkedListBlock.cpp  LinkedListTemplateFreeList.h  MD5.cpp  MapStringTemplate.h  PackFile.cpp  PackFileNodes.h  PointerRemapper.h  Quaternion.h
BerkeleyLib/: CMakeLists.txt
CoreLib/: CMakeLists.txt  CalcOperator.cpp  ConnectSocket.cpp  IndexedHuge.h  Indexes.h  ListenSocket.cpp  ListenSocket.h  MarkupTextParser.cpp  Socket.h  TextParser.cpp  TypeParser.cpp
CppParserLib/: ASCIITree.cpp  ASTCommon.h  AbstractSyntaxTree.cpp  CMakeLists.txt  PPDirective.cpp  PPTextWithSource.cpp  Preprocessor.cpp  PreprocessorTokeniser.cpp  Preprocessor_Windows.cpp  Project.cpp
DirectXLib/: CMakeLists.txt  Direct3DGlobal.cpp
GameLib/: CMakeLists.txt  GameLib.vcxproj  GameObject.h
ImageLib/: CMakeLists.txt
InputLib/: CMakeLists.txt  InputChord.cpp  InputChordCriteria.cpp  InputDevicesReader.cpp  InputSourceChannel.cpp  WinDirectInput.cpp  WinDirectInput.h  WinRaw.cpp  WinXInput.h
LanguageLib/: CMakeLists.txt  MetaTokeniser.cpp  NodeElement.h  TokenDumper.cpp  TypeElement.h
ShapeLib_Old/: CMakeLists.txt  ConvexHull.h  Distances.cpp  LineSegment.h  Plane.h  Shape.cpp  Shape.h  ShapeHierachy.h  ShapeTransformer.cpp  ShapeTypes.cpp  Sphere.h  VertexArray.cpp  VertexArray.h
StandardLib/: Array.h  ArrayCommonObject.h  Base.h  CMakeLists.txt  ConstructorUnknown.cpp  ConstructorUnknown.h  MapStringUnknown.h  ObjectConverter.h  ObjectFileGeneral.h  ObjectSerialiser.h  ObjectSource.cpp  ObjectWriter.h  SerialisedObject.cpp  SerialisedObject.h
SupportLib/: CMakeLists.txt  ConvexHull.cpp  ImageFileType.h  ImageReader.cpp  ImageWriter.cpp  MeshFileType.h  MeshReader.cpp  MeshWriter.cpp  WinText.cpp
TestLib/: CMakeLists.txt
WindowLib/: CMakeLists.txt  ComponentPointers.cpp  FlipContainer.h  Label.cpp  SlidingMenu.h  Widget.cpp
WorldLib/: CMakeLists.txt  InstanceConverter.cpp  Interpolator.h  InterpolatorArray.h  MatrixSelectionConverter.h  MeshConverter.cpp  Movement.cpp  TextureConverter.cpp
