SET(LIB_NAME BaseLib)
SET(HEADER_FILES
                    Aardvark.h
                    AbstractFile.h
                    AdditionalTypes.h
                    ArrayBit.h
                    ArrayBlock.h
                    ArrayChar.h
                    ArrayDenseTemplate.h
                    ArrayDouble.h
                    ArrayEmbedded.h
                    ArrayFloat.h
                    ArrayInt.h
                    ArrayInt2D.h
                    ArrayLong.h
                    ArrayPointer.h
                    ArrayPrimitiveTemplate.h
                    ArraySimple.h
                    ArraySimpleChar.h
                    ArraySparseTemplate.h
                    ArrayString.h
                    ArrayTemplate.h
                    ASCIINode.h
                    ASCIITree.h
                    BaseFileNode.h
                    Bool.h
                    BufferedFile.h
                    Chars.h
                    CharsHelper.h
                    CharsID.h
                    CharsIDArray.h
                    ChunkFile.h
                    ChunkFileIndex.h
                    ChunkFileNames.h
                    ConstructorCall.h
                    CSVFile.h
                    CSVFileEditable.h
                    CSVFileImutable.h
                    CSVHelper.h
                    DataMacro.h
                    DataTypes.h
                    Date.h
                    DebugLog.h
                    DebugOutput.h
                    Define.h
                    DiskFile.h
                    EnumeratorBlock.h
                    EnumeratorEnumerator.h
                    EnumeratorPointer.h
                    EnumeratorTemplate.h
                    EnumeratorVoid.h
                    Error.h
                    ErrorHandler.h
                    ErrorTypes.h
                    FastFunctions.h
                    FastMemcmp.h
                    FastMemcpy.h
                    FastMemcpyBackwards.h
                    FastMemset.h
                    FileBasic.h
                    FileCompare.h
                    FileCopier.h
                    FileHeader.h
                    FileIO.h
                    FileMode.h
                    FileNames.h
                    FileNode.h
                    FileNodeDirectory.h
                    FileNodeFileSystem.h
                    FileReader.h
                    FileSystem.h
                    FileSystemGeneral.h
                    FileSystemIterator.h
                    FileUtil.h
                    FileWriter.h
                    Float2.h
                    Float3.h
                    Float4.h
                    Float4x4.h
                    FloatHelper.h
                    FreeList.h
                    FreeListBlock.h
                    FreeListMaybe.h
                    GeometricTypes.h
                    Int2.h
                    Int3.h
                    Int4.h
                    IntegerHelper.h
                    LinkListAligned.h
                    LinkListBlock.h
                    LinkListBlockMemoryStack.h
                    LinkListTemplate.h
                    LinkListTemplateFreeList.h
                    LinkListTemplateMemoryStack.h
                    Logger.h
                    MapIntArraySimpleInt.h
                    MapIntInt.h
                    MapIntTemplate.h
                    MapPtrPtr.h
                    MapPtrTemplate.h
                    MapStringInt.h
                    MapStringString.h
                    MapStringTemplate.h
                    MapTemplate.h
                    Markup.h
                    MarkupBase.h
                    MarkupDoc.h
                    MarkupReference.h
                    MarkupSubstitute.h
                    MarkupTag.h
                    MarkupText.h
                    MD5.h
                    MD5HashFile.h
                    Memory.h
                    MemoryCache.h
                    MemoryCacheAllocation.h
                    MemoryFile.h
                    MemoryStack.h
                    MemoryStackExtended.h
                    MemoryStats.h
                    NaiveFile.h
                    Newline.h
                    Number.h
                    NumberControl.h
                    Numbers.h
                    PackedFloat.h
                    PackFile.h
                    PackFileIterator.h
                    PackFileNode.h
                    PackFileNodes.h
                    PackFileReadArrary.h
                    PackFiles.h
                    PackFilesGeneral.h
                    PointerFunctions.h
                    PointerRemapper.h
                    PrimitiveTypes.h
                    Quaternion.h
                    ScratchPad.h
                    StackMark.h
                    StringHelper.h
                    TextFile.h
                    TreeBlock.h
                    TreeBlockMemoryStack.h
                    TreeInt.h
                    TreeTemplate.h
                    TreeTemplateFreeList.h
                    TreeTemplateMemoryStack.h
                    Version.h
                    WindowsHeaders.h
				)

SET(SOURCE_FILES 
                    Aardvark.cpp
                    AbstractFile.cpp
                    AdditionalTypes.cpp
                    ArrayBit.cpp
                    ArrayBlock.cpp
                    ArrayInt.cpp
                    ArrayInt2D.cpp
                    ArrayLong.cpp
                    ArrayPointer.cpp
                    ArraySimpleChar.cpp
                    ArrayString.cpp
                    ASCIINode.cpp
                    ASCIITree.cpp
                    BaseFileNode.cpp
                    BufferedFile.cpp
                    Chars.cpp
                    CharsHelper.cpp
                    CharsIDArray.cpp
                    ChunkFile.cpp
                    ChunkFileIndex.cpp
                    CSVFile.cpp
                    CSVFileEditable.cpp
                    CSVFileImutable.cpp
                    CSVHelper.cpp
                    DataTypes.cpp
                    Date.cpp
                    DebugLog.cpp
                    DiskFile.cpp
                    EnumeratorBlock.cpp
                    EnumeratorEnumerator.cpp
                    EnumeratorPointer.cpp
                    EnumeratorTemplate.cpp
                    EnumeratorVoid.cpp
                    Error.cpp
                    ErrorHandler.cpp
                    ErrorTypes.cpp
                    FastFunctions.cpp
                    FastMemcmp.cpp
                    FastMemcpy.cpp
                    FastMemcpyBackwards.cpp
                    FastMemset.cpp
                    FileBasic.cpp
                    FileCompare.cpp
                    FileCopier.cpp
                    FileHeader.cpp
                    FileNodeFileSystem.cpp
                    FileReader.cpp
                    FileSystem.cpp
                    FileSystemIterator.cpp
                    FileUtil.cpp
                    FileUtil_Linux.cpp
                    FileUtil_Windows.cpp
                    FileWriter.cpp
                    Float2.cpp
                    Float3.cpp
                    Float4.cpp
                    Float4x4.cpp
                    FloatHelper.cpp
                    FreeList.cpp
                    FreeListBlock.cpp
                    FreeListMaybe.cpp
                    GeometricTypes.cpp
                    Int2.cpp
                    Int3.cpp
                    Int4.cpp
                    IntegerHelper.cpp
                    LinkListAligned.cpp
                    LinkListBlock.cpp
                    LinkListBlockMemoryStack.cpp
                    Logger.cpp
                    MapIntInt.cpp
                    MapPtrPtr.cpp
                    MapStringInt.cpp
                    MapStringString.cpp
                    Markup.cpp
                    MarkupBase.cpp
                    MarkupDoc.cpp
                    MarkupReference.cpp
                    MarkupSubstitute.cpp
                    MarkupTag.cpp
                    MarkupText.cpp
                    MD5.cpp
                    MD5HashFile.cpp
                    Memory.cpp
                    MemoryCache.cpp
                    MemoryCacheAllocation.cpp
                    MemoryFile.cpp
                    MemoryStack.cpp
                    MemoryStackExtended.cpp
                    MemoryStats.cpp
                    NaiveFile.cpp
                    Newline.cpp
                    Number.cpp
                    NumberControl.cpp
                    Numbers.cpp
                    PackedFloat.cpp
                    PackFile.cpp
                    PackFileIterator.cpp
                    PackFileNode.cpp
                    PackFileNodes.cpp
                    PackFileReadArrary.cpp
                    PackFiles.cpp
                    PointerFunctions.cpp
                    Quaternion.cpp
                    ScratchPad.cpp
                    StackMark.cpp
                    StringHelper.cpp
                    TextFile.cpp
                    TreeBlock.cpp
                    TreeBlockMemoryStack.cpp
				)

# Shared Library or Static				
IF(${CodaphelaLibrary_BUILD_SHARED_LIBRARIES})
	ADD_LIBRARY(${LIB_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})
ELSE()
	ADD_LIBRARY(${LIB_NAME} ${SOURCE_FILES} ${HEADER_FILES})
ENDIF()

# Installation
INSTALL(TARGETS ${LIB_NAME}
        LIBRARY DESTINATION lib${LIB_ARCH}
        ARCHIVE DESTINATION lib${LIB_ARCH}
        RUNTIME DESTINATION bin)
INSTALL(FILES ${HEADER_FILES}
        DESTINATION include/${PROJECT_NAME}/${LIB_NAME})

